Fix: change cover text position from px to percentage to match main page grid position and make it responsive on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,8 +83,8 @@ h2 {
 
     background-color: rgba(255, 215, 0, 0.7);
 
-    bottom: 100px;
-    left: 100px;
+    bottom: 5%;
+    left: 5%;
 
     position: absolute;
 }
@@ -373,6 +373,10 @@ p {
 
     .newheader-right {
         padding: 30px;
+    }
+
+    .newheader-right {
+        float: none;
     }
 
 }
